[package]
name = "distribution-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.farm]
path = "../dex/farm"

[dependencies.pair]
path = "../dex/pair"

[dependencies.router]
path = "../dex/router"

[dependencies.simple-lock]
path = "simple-lock"

[dependencies.energy-factory]
path = "energy-factory"

[dependencies.fees-collector]
path = "../energy-integration/fees-collector"

[dependencies.common_structs]
path = "../common/common_structs"

[dependencies.proxy_dex]
path = "proxy_dex"

[dependencies.lkmex-transfer]
path = "lkmex-transfer"

[dependencies.token-unstake]
path = "token-unstake"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-modules]
version = ""1.0.1""

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""
