[package]
name = "pause-all"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.pausable]
path = "../common/modules/pausable"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = ""1.0.1""

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""

[dev-dependencies.farm]
path = "../dex/farm"

[dev-dependencies.pair]
path = "../dex/pair"
