[package]
name = "common_structs"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.mergeable]
path = "../traits/mergeable"

[dependencies.fixed-supply-token]
path = "../traits/fixed-supply-token"

[dependencies.unwrappable]
path = "../traits/unwrappable"

[dependencies.math]
path = "../modules/math"
