[package]
name = "energy-factory-mock"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.energy-query]
path = "../common-modules/energy-query"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""
