[package]
name = "factory-legacy"
publish = false
version = "0.0.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = ""1.0.1""

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.token_merge_helper]
path = "../../common/modules/token_merge_helper"

[dependencies.energy-factory]
path = "../../locked-asset/energy-factory"

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""
