[package]
name = "farm-staking-proxy-v13"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = ""1.0.1""

[dependencies.token_merge_helper]
path = "../../common/modules/token_merge_helper"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.farm-staking]
path = "../../farm-staking/farm-staking"

[dependencies.pair]
path = "../../dex/pair"

[dependencies.farm-v13-locked-rewards]
path = "../farm-v13-locked-rewards"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.energy-factory]
path = "../../locked-asset/energy-factory"

[dev-dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dev-dependencies.simple-lock]
path = "../../locked-asset/simple-lock"

[dev-dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dev-dependencies.locking_module]
path = "../../common/modules/locking_module"

[dev-dependencies.pausable]
path = "../../common/modules/pausable"

[dev-dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""
