[package]
name = "lkmex-transfer"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.legacy_token_decode_module]
path = "../../common/modules/legacy_token_decode_module"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""

[dev-dependencies.dharitri-sc-modules]
version = ""1.0.1""
