[package]
name = "locked-token-wrapper"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = ""1.0.1""

[dependencies.dharitri-sc-modules]
version = ""1.0.1""

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.legacy_token_decode_module]
path = "../../common/modules/legacy_token_decode_module"

[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.energy-factory]
path = "../energy-factory"

[dependencies.lkmex-transfer]
path = "../lkmex-transfer"

[dependencies.energy-factory-mock]
path = "../../energy-integration/energy-factory-mock"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.common_structs]
path = "../../common/common_structs"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = ""1.0.1""
