[package]
name = "permissions_module"
version = "0.0.0"
authors = [
    "Dharitri <contact@dharitri.org>",
    "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",
]
edition = "2021"

[lib]
path = "src/permissions_module.rs"

[dependencies]
bitflags = "2.4.1"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]
