[package]
name = "sc_whitelist_module"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/sc_whitelist_module.rs"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]
