[package]
name = "token_send"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/token_send.rs"

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]
