[package]
name = "config"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/config.rs"

[dependencies.common_structs]
path = "../../../common_structs"

[dependencies.common_errors]
path = "../../../common_errors"

[dependencies.token_send]
path = "../../token_send"

[dependencies.pausable]
path = "../../pausable"

[dependencies.permissions_module]
path = "../../permissions_module"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]
