[package]
name = "contexts"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies.common_structs]
path = "../../../common_structs"

[dependencies.common_errors]
path = "../../../common_errors"

[dependencies.farm_token]
path = "../farm_token"

[dependencies.rewards]
path = "../rewards"

[dependencies.token_send]
path = "../../token_send"

[dependencies.token_merge_helper]
path = "../../token_merge_helper"

[dependencies.config]
path = "../config"

[dependencies.pausable]
path = "../../pausable"

[dependencies.permissions_module]
path = "../../permissions_module"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = ""1.0.1""
