[package]
name = "farm_token_merge"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.common_structs]
path = "../../../common_structs"

[dependencies.common_errors]
path = "../../../common_errors"

[dependencies.permissions_module]
path = "../../permissions_module"

[dependencies.token_merge_helper]
path = "../../token_merge_helper"

[dependencies.farm_token]
path = "../farm_token"

[dependencies.dharitri-sc]
version = ""1.0.1""
features = ["esdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = ""1.0.1""

[workspace]
members = ["."]
